--- a/src/index.scss
+++ b/src/index.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/icon?family=Material+Icons');
+
 * {
     margin: 0;
     padding: 0;
@@ -8,6 +10,12 @@ html,
 body,
 #root {
     height: 100vh;
+}
+
+#root {
+    display: flex;
+    flex-direction: column;
+    position: relative;
 }
 
 body {
@@ -24,7 +32,11 @@ body {
     padding: 0.5rem 1rem;
 }
 
-.nav__link {
+.headernav {
+    display: none;
+}
+
+.headernav__link {
     margin-left: 1rem;
     text-decoration: none;
     color: #3a3a3a;
@@ -33,25 +45,114 @@ body {
 .main {
     flex-grow: 1;
     padding: 1rem;
+    position: relative;
+    display: flex;
+    flex-direction: column;
 }
 
 .userlist {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: 1rem;
+    //three columns same width
+    grid-template-columns: repeat(3, calc((100% - 1rem) / 3) );
+    grid-gap: 0.5rem;
     padding: 1rem 0;
 }
 
 .userlist__card {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
     background: #fff;
     border-radius: 0.5rem;
-    padding: 1rem;
+    padding: 0.5rem;
     text-align: center;
-    box-shadow: 0 0 14px rgba(0, 0, 0, 0.02);
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
     transition: transform 0.2s;
     cursor: pointer;
 }
 
 .userlist__card:hover {
     transform: translateY(10px) scale(1.02);
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.2);
+}
+
+.userlist__card-avatar , .userinfo__avatar {
+    width: 100%;
+}
+
+.userlist__card-name {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
+.userlist__card a {
+    text-decoration: none;
+    color: black;
+}
+
+.profileform {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 1rem 0;
+}
+
+.profileform__control {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+}
+
+.footer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem;
+    background: #3a3a3a;
+
+    @media screen and (min-width: 768px) {
+        display: none;
+    }
+}
+
+.footernav__link {
+    margin: 0 1rem;
+    text-decoration: none;
+    color: #fff;
+}
+
+.userinfo {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    margin: -1rem;
+}
+
+.userinfo__name {
+    margin: 1rem 0;
+}
+
+.userinfo__actions {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    gap: 1rem;
+}
+
+.userinfo__avatar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    z-index: -1;
+}
+
+.userinfo__actions-overlay {
+    backdrop-filter: blur(5px);
+    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
+    padding: 1rem;
 }
