--- a/src/index.scss
+++ b/src/index.scss
@@ -104,12 +104,17 @@ body {
     gap: 0.5rem;
 }
 
+.profileform__control textarea {
+    resize: none;
+    min-height: 100px;
+}
+
 .footer {
     display: flex;
     align-items: center;
     justify-content: center;
     padding: 1rem;
-    background: #3a3a3a;
+    background: rgb(16, 16, 16);
 
     @media screen and (min-width: 768px) {
         display: none;
@@ -131,7 +136,7 @@ body {
 }
 
 .userinfo__name {
-    margin: 1rem 0;
+    
 }
 
 .userinfo__actions {
@@ -139,6 +144,10 @@ body {
     justify-content: flex-end;
     align-items: center;
     gap: 1rem;
+}
+
+.userinfo__actions a {
+    color: #f0f0f5;
 }
 
 .userinfo__avatar {
@@ -153,6 +162,79 @@ body {
 
 .userinfo__actions-overlay {
     backdrop-filter: blur(5px);
-    background: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7));
+    background-color: rgba(16, 16, 16,0.8);
     padding: 1rem;
+    color: white;
+}
+
+.userinfo__header {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.userinfo__description {
+    padding: 1rem 0;
+    height: 0;
+    transition: all 0.3s ease;
+}
+
+.messages-private {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+.messages-list {
+    flex-grow: 1;
+    overflow-y: auto;
+    padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.messages-textarea {
+    position: relative;
+}
+
+.messages-textarea textarea {
+    width: 100%;
+    resize: none;
+    min-height: 100px;
+    padding: 1rem;
+    border: 1px solid #ccc;
+    border-radius: 0.5rem;
+}
+
+.messages-textarea button {
+    position: absolute;
+    bottom: 1rem;
+    right: 1rem;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    background: #f0f0f5;
+    cursor: pointer;
+}
+
+.message {
+    //the message is on the right , with an orange background and little radius and padding
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.message_right {
+    background-color: orange;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    align-self: flex-end;
+}
+
+.message_left {
+    background-color: lightblue;
+    border-radius: 0.5rem;
+    padding: 0.5rem 1rem;
+    align-self: flex-start;
 }
