--- a/src/index.scss
+++ b/src/index.scss
@@ -289,3 +289,15 @@ body {
     background-color: white;
     width: calc(100% - 2rem);
 }
+
+.landing-form__actions {
+    display: flex;
+    justify-content: center;
+    gap: 1rem;
+    align-items: center;
+}
+
+.landing-form__link {
+    text-decoration: none;
+    color: black;
+}
