--- a/src/index.scss
+++ b/src/index.scss
@@ -62,7 +62,7 @@ body {
     display: grid;
     grid-template-columns: repeat(3, calc((100% - 1rem) / 3) );
     grid-gap: 0.5rem;
-    padding: 1rem 0;
+    padding: 0.5rem;
 }
 
 .userlist__card {
@@ -314,4 +314,18 @@ body {
     border: none;
     outline: none;
     margin-left: 1rem;
+}
+
+
+
+.page__title {
+    padding: 0 0.5rem;
+}
+
+.loader-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 1rem;
+    padding: 0.5rem;
 }
