--- a/src/index.scss
+++ b/src/index.scss
@@ -172,7 +172,6 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
-    margin: -1rem;
 }
 
 .userinfo__name {
@@ -348,4 +347,47 @@ body {
 
 .loader-form {
     padding: 0.5rem;
+}
+
+.messages {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    padding: 0.5rem;
+}
+
+.messages__item {
+    display: flex;
+    gap: 0.5rem;
+    height: 100px;
+    align-items: center;
+    box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.7);
+    border-radius: 3px;
+    padding: 0.5rem;
+    background-color: white;
+    transition: all 0.3s ease;
+    cursor: pointer;
+}
+
+.messages__item-link {
+    text-decoration: none;
+    color: black;
+}
+
+.messages__item:hover {
+    box-shadow: 1px 1px 12px rgba(0, 0, 0, 0.2);
+    transform: translateY(4px);
+}
+
+.messages__item-image {
+    width: 80px;
+    height: 80px;
+}
+
+.messages__item-info {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 1rem 0;
+    align-self: stretch;
 }
